# genai_playground

./: .gitignore  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
data/: README.md  dataset_info.json
docker/docker-cuda/: Dockerfile  Dockerfile.megatron  README.md  docker-compose.yml
docker/docker-npu/: Dockerfile  docker-compose.yml
docker/docker-rocm/: Dockerfile  docker-compose.yml
examples/: README.md
examples/train_lora/: llama3_lora_sft.sh  llama3_lora_sft_ray.yaml
models/: __init__.py  hf_model.py  openai_client.py  router.py  vllm_client.py
monitoring/: __init__.py  activations_viz.py  mlflow_utils.py  tracing_openai.py
scripts/: bench_qwen.py  download_model.py  eval_bleu_rouge.py  megatron_merge.py  qwen_omni_merge.py  vllm_infer.py
scripts/stat_utils/: cal_flops.py  cal_lr.py  cal_mfu.py  cal_ppl.py  length_cdf.py
src/: api.py  train.py  webui.py
src/genaiplayground/: __init__.py  cli.py  launcher.py
src/genaiplayground/api/: chat.py  common.py
src/genaiplayground/chat/: chat_model.py  kt_engine.py  (+2 more)
tests/: conftest.py
tests/data/: test_collator.py  test_converter.py  test_formatter.py  test_loader.py  test_mm_plugin.py  test_template.py
tests/e2e/: test_chat.py  test_sglang.py  test_train.py
tests/eval/: test_eval_template.py
tests/model/: test_base.py  test_freeze.py  test_full.py  test_lora.py  test_pissa.py
tests/train/: test_sft_trainer.py
tests_v1/core/: test_data_engine.py
training/: __init__.py  dataset.py  finetune.py  launcher.py
(+88 files in other folders)
